// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`form/Select Default smoke-test 1`] = `
<div>
  <div data-module="gieds-select">
    <label for="unique-id"
           class="gi-text-md gi-mb-1 gi-block gi-mb-2"
    >
      Label
    </label>
    <select id="unique-id"
            aria-label="Label"
            class="focus:gi-outline focus:gi-outline-[3px] focus:gi-outline-yellow-400 focus:gi-outline-offset-0 gi-p-1.5 gi-border-black gi-border-[3px] gi-border-solid gi-min-w-56 gi-font-primary xs:gi-text-sm md:gi-text-md lg:gi-text-lg "
    >
      <option class="gi-font-primary xs:gi-text-sm md:gi-text-md lg:gi-text-lg"
              value="value-1"
      >
        Option 1
      </option>
      <option class="gi-font-primary xs:gi-text-sm md:gi-text-md lg:gi-text-lg"
              value="value-2"
      >
        Option 2
      </option>
      <option class="gi-font-primary xs:gi-text-sm md:gi-text-md lg:gi-text-lg"
              value="value-3"
      >
        Option 3
      </option>
    </select>
  </div>
</div>
`;

exports[`form/Select withError smoke-test 1`] = `
<div>
  <div data-module="gieds-select">
    <label for="unique-id"
           class="gi-text-md gi-mb-1 gi-block "
    >
      Default Select
    </label>
    <p class="gi-text-md gi-font-bold gi-text-red-600 gi-clear-both gi-block !gi-mt-0 !gi-mb-[14px] ">
      Error message
    </p>
    <select id="unique-id"
            aria-label="Default Select"
            class="focus:gi-outline focus:gi-outline-[3px] focus:gi-outline-yellow-400 focus:gi-outline-offset-0 gi-p-1.5 gi-border-black gi-border-[3px] gi-border-solid gi-min-w-56 gi-font-primary xs:gi-text-sm md:gi-text-md lg:gi-text-lg "
    >
      <option class="gi-font-primary xs:gi-text-sm md:gi-text-md lg:gi-text-lg"
              value="value-1"
      >
        Option 1
      </option>
      <option class="gi-font-primary xs:gi-text-sm md:gi-text-md lg:gi-text-lg"
              value="value-2"
      >
        Option 2
      </option>
      <option class="gi-font-primary xs:gi-text-sm md:gi-text-md lg:gi-text-lg"
              value="value-3"
      >
        Option 3
      </option>
    </select>
  </div>
</div>
`;

exports[`form/Select withGroups smoke-test 1`] = `
<div>
  <div data-module="gieds-select">
    <label for="unique-id"
           class="gi-text-md gi-mb-1 gi-block gi-mb-2"
    >
      Default Select
    </label>
    <select id="unique-id"
            aria-label="Default Select"
            class="focus:gi-outline focus:gi-outline-[3px] focus:gi-outline-yellow-400 focus:gi-outline-offset-0 gi-p-1.5 gi-border-black gi-border-[3px] gi-border-solid gi-min-w-56 gi-font-primary xs:gi-text-sm md:gi-text-md lg:gi-text-lg "
    >
      <optgroup label="Group 1">
        <option class="gi-font-primary xs:gi-text-sm md:gi-text-md lg:gi-text-lg"
                value="value-1"
        >
          Option 1
        </option>
        <option class="gi-font-primary xs:gi-text-sm md:gi-text-md lg:gi-text-lg"
                value="value-2"
        >
          Option 2
        </option>
        <option class="gi-font-primary xs:gi-text-sm md:gi-text-md lg:gi-text-lg"
                value="value-3"
        >
          Option 3
        </option>
      </optgroup>
      <optgroup label="Group 2">
        <option class="gi-font-primary xs:gi-text-sm md:gi-text-md lg:gi-text-lg"
                value="value-4"
        >
          Option 4
        </option>
        <option class="gi-font-primary xs:gi-text-sm md:gi-text-md lg:gi-text-lg"
                value="value-5"
        >
          Option 5
        </option>
        <option class="gi-font-primary xs:gi-text-sm md:gi-text-md lg:gi-text-lg"
                value="value-6"
        >
          Option 6
        </option>
      </optgroup>
    </select>
  </div>
</div>
`;

exports[`form/Select withHint smoke-test 1`] = `
<div>
  <div data-module="gieds-select">
    <label for="unique-id"
           class="gi-text-md gi-mb-1 gi-block "
    >
      Default Select
    </label>
    <p class="gi-text-md gi-mb-2 gi-font-normal gi-text-gray-600 ">
      This can be different to where you went before
    </p>
    <select id="unique-id"
            aria-label="Default Select"
            class="focus:gi-outline focus:gi-outline-[3px] focus:gi-outline-yellow-400 focus:gi-outline-offset-0 gi-p-1.5 gi-border-black gi-border-[3px] gi-border-solid gi-min-w-56 gi-font-primary xs:gi-text-sm md:gi-text-md lg:gi-text-lg "
    >
      <option class="gi-font-primary xs:gi-text-sm md:gi-text-md lg:gi-text-lg"
              value="value-1"
      >
        Option 1
      </option>
      <option class="gi-font-primary xs:gi-text-sm md:gi-text-md lg:gi-text-lg"
              value="value-2"
      >
        Option 2
      </option>
      <option class="gi-font-primary xs:gi-text-sm md:gi-text-md lg:gi-text-lg"
              value="value-3"
      >
        Option 3
      </option>
    </select>
  </div>
</div>
`;

exports[`form/Select withoutLabel smoke-test 1`] = `
<div>
  <div data-module="gieds-select">
    <select id="unique-id"
            aria-label="unique-id"
            class="focus:gi-outline focus:gi-outline-[3px] focus:gi-outline-yellow-400 focus:gi-outline-offset-0 gi-p-1.5 gi-border-black gi-border-[3px] gi-border-solid gi-min-w-56 gi-font-primary xs:gi-text-sm md:gi-text-md lg:gi-text-lg "
    >
      <option class="gi-font-primary xs:gi-text-sm md:gi-text-md lg:gi-text-lg"
              value="value-1"
      >
        Option 1
      </option>
      <option class="gi-font-primary xs:gi-text-sm md:gi-text-md lg:gi-text-lg"
              value="value-2"
      >
        Option 2
      </option>
      <option class="gi-font-primary xs:gi-text-sm md:gi-text-md lg:gi-text-lg"
              value="value-3"
      >
        Option 3
      </option>
    </select>
  </div>
</div>
`;
